--- a/webformassistenza/src/main/resources/content/Language_it_IT.properties
+++ b/webformassistenza/src/main/resources/content/Language_it_IT.properties
@@ -144,3 +144,8 @@ captcha.num.6=sei
 captcha.num.7=sette
 captcha.num.8=otto
 captcha.num.9=nove
+
+#new tabs configurazioni
+
+noipawebformassistenza.config.csv.1=Csv 1
+noipawebformassistenza.config.csv.2=Csv 2
