--- a/webformassistenza/src/main/resources/content/Language_it_IT.properties
+++ b/webformassistenza/src/main/resources/content/Language_it_IT.properties
@@ -147,5 +147,5 @@ captcha.num.9=nove
 
 #new tabs configurazioni
 
-noipawebformassistenza.config.csv.1=Csv 1
-noipawebformassistenza.config.csv.2=Csv 2
+noipawebformassistenza.config.csv.amministrazioni=Amministrazioni
+noipawebformassistenza.config.csv.tipologie=Tipologie
