Mod webform new

--- a/webformassistenza/src/main/resources/content/Language_de_DE.properties
+++ b/webformassistenza/src/main/resources/content/Language_de_DE.properties
@@ -50,7 +50,7 @@ noipawebformassistenza.dati.nota.obb=Die mit den Zeichen (*) versehenen Felder s
 noipawebformassistenza.dati.desc=Beschreibung
 noipawebformassistenza.dati.desc.info=Wenn die Hilfsanfrage von einem Sachbearbeiter f&uuml;r eine andere Person erstellt wird, ist es notwendig, in diesem Feld auch Vor- und Zuname und die Steuernummer der bediensteten Person, auf welche sich die Anfrage bezieht, anzugeben
 noipawebformassistenza.dati.nota.concl=F&uuml;r einige Arten von Anfragen ist es m&ouml;glich, die gr&uuml;ne Nummer 800 991 990 zu w&auml;hlen, aktiv von Montag bis Freitag in der Zeit von 8.00 bis 18.00 Uhr. Die gr&uuml;ne Nummer ist ausschlie&szlig;lich &uuml;ber Festnetz erreichbar. Es besteht die M&ouml;glichkeit, die &uuml;ber die gr&uuml;ne Nummer behandelteten Arten von Anfragen zu &uuml;berpr&uuml;fen, u. zw. unter folgendem Link:
-noipawebformassistenza.dati.supporto=Kontaktformular
+
 noipawebformassistenza.dati.nota.concl.link=<a class="textDecoration" href="{0}" aria-label="Vai a Flusso gestione richieste" target="_blank">Flusso gestione richieste</a>.
 noipawebformassistenza.dati.desc.nota1=Um die Hilfsanfrage der f&uuml;r die Materie zust&auml;ndigen Gruppe in korrekter Weise zuzuordnen, ersuchen wir dich, das Antragsformular so auszuf&uuml;llen, dass das Problem in klarer und detailierter Weise dargelegt wird.
 noipawebformassistenza.dati.nota.finale=Die im vorliegenden Blatt enthaltenen pers&ouml;nlichen Daten werden ausschlie&szlig;lich f&uuml;r die im Informationsschreiben gem&auml;&szlig; Art. 13 der EU-Richtlinie 679/2016 vorgesehenen erkl&auml;rten Zwecke und innerhalb der dort vorgesehenen Bedingungen verwendet. F&uuml;r weitere Informationen kann der folgende link
@@ -149,3 +149,23 @@ captcha.num.9=nove
 
 noipawebformassistenza.config.csv.amministrazioni=Amministrazioni
 noipawebformassistenza.config.csv.tipologie=Tipologie
+
+# Nuevelabels da tradurre
+noipawebformassistenza.label.link.amministrato=Amministrato
+noipawebformassistenza.label.link.amministrato.aria.label=Vai al modulo di contatto per Amministrato
+noipawebformassistenza.label.link.mvp=Modulo Valutazione e Performance
+noipawebformassistenza.label.link.mvp.aria.label=Vai al modulo di contatto per Modulo Valutazioni e Performance
+noipawebformassistenza.label.link.enteCreditore=Ente creditore
+noipawebformassistenza.label.link.enteCreditore.aria.label=Vai al modulo di contatto per Ente creditore
+noipawebformassistenza.label.link.percettorePensione=Percettore di pensione
+noipawebformassistenza.label.link.percettorePensione.aria.label=Vai al modulo di contatto per Percettore di pensione
+
+noipawebformassistenza.dati.supporto=Modulo di contatto
+noipawebformassistenza.dati.supporto.Amministrato=Amministrato - Modulo di contatto
+noipawebformassistenza.dati.supporto.MVP=Valutazione e Performance - Modulo di contatto
+noipawebformassistenza.dati.supporto.EntiCreditori=Ente creditore - Modulo di contatto
+noipawebformassistenza.dati.supporto.AreaPensioni=Percettore di pensione - Modulo di contatto
+noipawebformassistenza.dati.denominazione=Denominazione
+noipawebformassistenza.dati.ragSociale=Rag. Sociale
+noipawebformassistenza.dati.piva= CF/P.IVA
+noipawebformassistenza.dati.piva.error=Il CF/P.IVA inserito risulta non formalmente corretto
