--- a/webformassistenza/src/main/resources/content/Language_en_US.properties
+++ b/webformassistenza/src/main/resources/content/Language_en_US.properties
@@ -50,7 +50,7 @@ noipawebformassistenza.dati.nota.obb=Fields marked with (*) are mandatory
 noipawebformassistenza.dati.desc=Description
 noipawebformassistenza.dati.desc.info=If the assistance\u2019s request is made by an operator for a different subject, it is also necessary to indicate in this field the Name, Surname and National Insurance Number of the employee to whom the request refers
 noipawebformassistenza.dati.nota.concl=For some types of request, you can contact the toll-free number 800 991 990 available Monday to Friday, from 8.00 to 18.00. The toll-free number can only be reached from a landline. It is possible to check the types of requests managed through the toll-free number, at the following link: Request management flow
-noipawebformassistenza.dati.supporto=Contact form
+
 noipawebformassistenza.dati.nota.concl.link=<a class="textDecoration" href="{0}" aria-label="Go to Request management flow" target="_blank"> Request management flow</a>.
 noipawebformassistenza.dati.desc.nota1=To correctly assign the assistance\u2019s request to the group responsible for the subject, we kindly ask you to fill in the request form setting out the problem clearly and in detail.
 noipawebformassistenza.dati.nota.finale=The personal data contained in this form are provided for the interest provided for by EU Regulation 679/2016. For more information you can use the following link
@@ -149,3 +149,23 @@ captcha.num.9=nove
 
 noipawebformassistenza.config.csv.amministrazioni=Amministrazioni
 noipawebformassistenza.config.csv.tipologie=Tipologie
+
+# Nuevelabels da tradurre
+noipawebformassistenza.label.link.amministrato=Amministrato
+noipawebformassistenza.label.link.amministrato.aria.label=Vai al modulo di contatto per Amministrato
+noipawebformassistenza.label.link.mvp=Modulo Valutazione e Performance
+noipawebformassistenza.label.link.mvp.aria.label=Vai al modulo di contatto per Modulo Valutazioni e Performance
+noipawebformassistenza.label.link.enteCreditore=Ente creditore
+noipawebformassistenza.label.link.enteCreditore.aria.label=Vai al modulo di contatto per Ente creditore
+noipawebformassistenza.label.link.percettorePensione=Percettore di pensione
+noipawebformassistenza.label.link.percettorePensione.aria.label=Vai al modulo di contatto per Percettore di pensione
+
+noipawebformassistenza.dati.supporto=Modulo di contatto
+noipawebformassistenza.dati.supporto.Amministrato=Amministrato - Modulo di contatto
+noipawebformassistenza.dati.supporto.MVP=Valutazione e Performance - Modulo di contatto
+noipawebformassistenza.dati.supporto.EntiCreditori=Ente creditore - Modulo di contatto
+noipawebformassistenza.dati.supporto.AreaPensioni=Percettore di pensione - Modulo di contatto
+noipawebformassistenza.dati.denominazione=Denominazione
+noipawebformassistenza.dati.ragSociale=Rag. Sociale
+noipawebformassistenza.dati.piva= CF/P.IVA
+noipawebformassistenza.dati.piva.error=Il CF/P.IVA inserito risulta non formalmente corretto
